--- a/WebAppTraining/App_Themes/Theme1/Theme1.css
+++ b/WebAppTraining/App_Themes/Theme1/Theme1.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-color:blue;
-    font-size:20px;
-    font-family:Arial, Helvetica, sans-serif;
+    /*background-color:blue;*/
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
