--- a/WebAppTraining/Content/custom.css
+++ b/WebAppTraining/Content/custom.css
@@ -1,53 +1,33 @@
 ﻿body {
 }
-
 #nav{
     background-color:#d8d8b1;
     padding :20px 100px 20px 300px;
 }
-
 ul{
     list-style-type:none;
 }
-
 li{
-    display:inline;
-    padding-left:5px;
-    column-width:50px;
+    display:inline;    padding-left:5px;    column-width:50px;
 }
-
 li a {
     font-size:20px;
     column-width:50px;
 }
 a{
-    text-decoration:none;
-    margin-left:30px;
+    text-decoration:none;    margin-left:30px;
 }
-
 li a:hover{
-    background-color:aqua;
-    color:#000;
+    background-color:aqua;    color:#000;
 }
-
 #side{
-    text-align:center;
-    float:left;
-    width:30%;
-    background-color:#935e5e;
-    padding-bottom:20%;
+    text-align:center;    float:left;    width:30%;
+    background-color:#935e5e;    padding-bottom:20%;
     min-height:200px;
 }
 #contentSection{
-    float:right;
-    width:64%;    
-    padding: 20px;    
+    float:right;   width:64%;        padding: 20px;    
 }
-
 #footer{
-    border-top:1px solid #000;
-    clear:both;
-    padding-bottom:5%;
-    text-align:center;
-    font-size:20px;
+    border-top:1px solid #000;    clear:both;    padding-bottom:5%;    text-align:center;    font-size:20px;
 }
